// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderProcessing Component renders error state correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "padding": 15,
            },
            undefined,
            {
              "flex": 1,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginBottom": 24,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ca35421a",
                  "borderRadius": 20,
                  "height": 40,
                  "justifyContent": "center",
                  "padding": 4,
                  "width": 40,
                }
              }
            >
              <SvgMock
                color="#ca3542"
                fill="currentColor"
                height={32}
                name="Close"
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
                width={32}
              />
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 40,
                "fontWeight": "700",
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginBottom": 16,
                "textAlign": "center",
              }
            }
          >
            0.05
             
            ETH
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
                "textAlign": "center",
              }
            }
          >
            We were unable to complete your deposit
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderRadius": 8,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#f3f5f9",
                  "borderRadius": 36,
                  "flexDirection": "row",
                  "gap": 4,
                  "paddingLeft": 4,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "height": 16,
                    "justifyContent": "center",
                    "width": 16,
                  }
                }
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum Main Network
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Order ID
            </Text>
            <TouchableOpacity
              onPress={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 3,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                ..
                der-id
              </Text>
              <SvgMock
                color="#121314"
                fill="currentColor"
                height={24}
                name="Copy"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              {
                "backgroundColor": "#b7bbc866",
                "height": 1,
                "marginHorizontal": -16,
                "marginVertical": 8,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Fees
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $2.50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Total
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $102.50
            </Text>
          </View>
        </View>
        <TouchableOpacity
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#4459ff",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            View order details in Transak
          </Text>
          <SvgMock
            color="#4459ff"
            fill="currentColor"
            height={16}
            name="Export"
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
            width={16}
          />
        </TouchableOpacity>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              [
                [
                  {
                    "borderRadius": 12,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#4459ff",
                    "minHeight": 50,
                  },
                  undefined,
                ],
                null,
              ]
            }
            testID="main-action-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  null,
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#ffffff",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              Try again
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              [
                [
                  {
                    "borderRadius": 12,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  null,
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              Contact support
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`OrderProcessing Component renders no order found state 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "padding": 15,
            },
            {
              "flex": 1,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            No order found
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`OrderProcessing Component renders processing state correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "padding": 15,
            },
            undefined,
            {
              "flex": 1,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginBottom": 24,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "padding": 4,
                  "width": 40,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  color="#4459ff"
                  size="large"
                />
              </View>
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 40,
                "fontWeight": "700",
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginBottom": 16,
                "textAlign": "center",
              }
            }
          >
            0.05
             
            ETH
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
                "textAlign": "center",
              }
            }
          >
            Card purchases typically take a few minutes
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderRadius": 8,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#f3f5f9",
                  "borderRadius": 36,
                  "flexDirection": "row",
                  "gap": 4,
                  "paddingLeft": 4,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "height": 16,
                    "justifyContent": "center",
                    "width": 16,
                  }
                }
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum Main Network
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Order ID
            </Text>
            <TouchableOpacity
              onPress={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 3,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                ..
                der-id
              </Text>
              <SvgMock
                color="#121314"
                fill="currentColor"
                height={24}
                name="Copy"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              {
                "backgroundColor": "#b7bbc866",
                "height": 1,
                "marginHorizontal": -16,
                "marginVertical": 8,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Fees
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $2.50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Total
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $102.50
            </Text>
          </View>
        </View>
        <TouchableOpacity
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#4459ff",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            View order details in Transak
          </Text>
          <SvgMock
            color="#4459ff"
            fill="currentColor"
            height={16}
            name="Export"
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
            width={16}
          />
        </TouchableOpacity>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              [
                [
                  {
                    "borderRadius": 12,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#4459ff",
                    "minHeight": 50,
                  },
                  undefined,
                ],
                null,
              ]
            }
            testID="main-action-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  null,
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#ffffff",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              Close
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`OrderProcessing Component renders success state correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "padding": 15,
            },
            undefined,
            {
              "flex": 1,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginBottom": 24,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#1c7e331a",
                  "borderRadius": 20,
                  "height": 40,
                  "justifyContent": "center",
                  "padding": 4,
                  "width": 40,
                }
              }
            >
              <SvgMock
                color="#1c7e33"
                fill="currentColor"
                height={32}
                name="CheckBold"
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
                width={32}
              />
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 40,
                "fontWeight": "700",
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginBottom": 16,
                "textAlign": "center",
              }
            }
          >
            0.05
             
            ETH
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
                "textAlign": "center",
              }
            }
          >
            Your deposit of 100 USD was successful!
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderRadius": 8,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#f3f5f9",
                  "borderRadius": 36,
                  "flexDirection": "row",
                  "gap": 4,
                  "paddingLeft": 4,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "height": 16,
                    "justifyContent": "center",
                    "width": 16,
                  }
                }
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum Main Network
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Order ID
            </Text>
            <TouchableOpacity
              onPress={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 3,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                ..
                der-id
              </Text>
              <SvgMock
                color="#121314"
                fill="currentColor"
                height={24}
                name="Copy"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              {
                "backgroundColor": "#b7bbc866",
                "height": 1,
                "marginHorizontal": -16,
                "marginVertical": 8,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Fees
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $2.50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Total
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $102.50
            </Text>
          </View>
        </View>
        <TouchableOpacity
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#4459ff",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            View order details in Transak
          </Text>
          <SvgMock
            color="#4459ff"
            fill="currentColor"
            height={16}
            name="Export"
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
            width={16}
          />
        </TouchableOpacity>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              [
                [
                  {
                    "borderRadius": 12,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#4459ff",
                    "minHeight": 50,
                  },
                  undefined,
                ],
                null,
              ]
            }
            testID="main-action-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  null,
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#ffffff",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              Close
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
